--- a/homework12/index.html
+++ b/homework12/index.html
@@ -15,7 +15,7 @@
         <form class="search">
           <span>Enter movie number</span>
           <input type="number" min="1" max="7">
-          <button class="submit__btn yellow__btn" type="submit">find</button>
+          <button class="submit__btn yellow__btn" type="submit">FIND</button>
         </form>
         <div class="info">
           <h2 class='title__info'></h2>
